--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
