--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.6",
+    "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   },
