--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.6",
     "http-proxy-middleware": "^2.0.6",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sockjs-client": "^1.6.1",
     "theme-change": "^2.5.0",
     "web-vitals": "^2.1.0"
   },
