--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework:spring-messaging:5.3.20'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
