--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.6",
     "http-proxy-middleware": "^2.0.6",
-    "jquery": "^3.7.0",
+    "i18next": "^22.4.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
