--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,34 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.servlet.session.tracking-modes=cookie
+
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# DB source url
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db
+
+# DB username
+spring.datasource.username=root
+
+# DB password
+spring.datasource.password=qwe123
+
+# True : ???? ?? ?? ?? ??
+spring.jpa.show-sql=true
+
+# Hibernate? ???? ??? ??? SQL? ??? ?? (??? formating)
+spring.jpa.properties.hibernate.format_sql=true
+
+# DDL ?????? ?? ??
+spring.jpa.generate-ddl=true
+
+# Mysql ??
+spring.jpa.database=mysql
+
+# hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# maintain DB connection
+spring.datasource.dbcp.testOnBorrow=true
+spring.datasource.dbcp.validationQuery=SELECT 1
+# spring.jpa.hibernate.ddl-auto=update // ????? ??
