--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.datasource.dbcp.validationQuery=SELECT 1
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.servlet.session.tracking-modes=cookie
+
+spring.sql.init.schema-locations=classpath:sql/ddl.sql
+spring.sql.init.data-locations=classpath:sql/insert.sql
+spring.sql.init.mode=always
