--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,8 @@ server.servlet.session.tracking-modes=cookie
 spring.sql.init.schema-locations=classpath:sql/ddl.sql
 spring.sql.init.data-locations=classpath:sql/insert.sql
 spring.sql.init.mode=always
+
+server.port=8443
+server.ssl.key-store=classpath:spring_key.p12
+server.ssl.key-store-password=root
+server.ssl.key-store-type=PKCS12
