--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "theme-change": "^2.5.0",
     "web-vitals": "^2.1.0"
   },
-  "homepage": "http://메디챗.웹.한국",
+  "homepage": "https://메디챗.웹.한국",
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./certificate.crt SSL_KEY_FILE=./private.key react-scripts start",
     "build": "react-scripts build",
